--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -12,12 +12,13 @@ const textLinks: { label: string; href: string }[] = [
 
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
+	{ label: 'LinkedIn', href: 'https://linkedin.com/in/cyril-joy-mangalan', icon: 'linkedin-logo' },
 	{ label: 'Twitter', href: 'https://twitter.com/da_r3vo', icon: 'twitter-logo' },
-	{ label: 'Twitch', href: 'https://twitch.tv/da_revo', icon: 'twitch-logo' },
-	{ label: 'GitHub', href: 'https://github.com/da-revo', icon: 'github-logo' },
+	// { label: 'Twitch', href: 'https://twitch.tv/da_revo', icon: 'twitch-logo' },
 	// { label: 'CodePen', href: 'https://codepen.io/me', icon: 'codepen-logo' },
 	// { label: 'dribbble', href: 'https://dribbble.com/me', icon: 'dribbble-logo' },
-	{ label: 'YouTube', href: 'https://www.youtube.com/@me/', icon: 'youtube-logo' },
+	{ label: 'YouTube', href: 'https://www.youtube.com/@da_revo5747', icon: 'youtube-logo' },
+	{ label: 'GitHub', href: 'https://github.com/da-revo', icon: 'github-logo' },
 ];
 ---
 
@@ -65,7 +66,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 			<div class="socials">
 				{
 					iconLinks.map(({ href, icon, label }) => (
-						<a href={href} class="social">
+						<a href={href} target="_blank" class="social">
 							<span class="sr-only">{label}</span>
 							<Icon icon={icon} />
 						</a>
@@ -101,7 +102,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 			<div class="socials">
 				{
 					iconLinks.map(({ href, icon, label }) => (
-						<a href={href} class="social">
+						<a href={href} target="_blank" class="social">
 							<span class="sr-only">{label}</span>
 							<Icon icon={icon} />
 						</a>
