--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,21 +31,21 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Hi there, I'm Cyril Joy Mangalan"
-					tagline="I am a Software Engineer who is currently based in Toronto, Ontario 🇨🇦"
+					tagline="I am a Software Engineer based in Toronto, Ontario 🇨🇦"
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Engineering</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Startups</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Philosophy</Pill>
 					</div>
 				</Hero>
 
 				<img
-					alt="Cyril Joy Mangalan smiling in a red plaid shirt and tortoise shell glasses"
+					alt="Cyril Joy Mangalan portrait"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="/assets/portrait.png"
 				/>
 			</header>
 
@@ -56,7 +56,7 @@ const projects = (await getCollection('work'))
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<p>Take a look below at some of my best work from the past few years.</p>
 				</header>
 
 				<div class="gallery">
