Add project pics

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,8 +13,8 @@ const currentYear = new Date().getFullYear();
 	</div>
 	<p class="socials">
 		<a href="https://twitter.com/da_r3vo"> Twitter</a>
+		<a href="https://linkedin.com/in/cyril-joy-mangalan"> LinkedIn</a>
 		<a href="https://github.com/da-revo"> GitHub</a>
-		<!-- <a href="https://codepen.io/me"> CodePen</a> -->
 	</p>
 </footer>
 <style>
