--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,7 +46,26 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p>
+						<b>Bachelor of Technology in Computer Science & Engineering</b> <br>
+						<b>Manipal Institute of Technology, Manipal University</b> <br>
+						<i>Equivalent to Bachelor of Engineering (BEng) in Canada</i> <br>
+						Graduated June 2021
+						<br>
+						<br>
+						<b>Postgraduate Certificate in Entrepreneurship Management</b> <br>
+						<b>Centre for Business, George Brown College</b> <br>
+						<i>Dean&#39;s Honours List for Academic Excellence, GPA: 3.52/4.0</i> <br>
+						Graduating May 2024
+						<br>
+						<br>
+						<b>Startup School</b> <br>
+						<b>Y Combinator</b> <br>
+						<br>
+						<br>
+						<b>Backend Development</b> <br>
+						<b>Boot.dev</b> <br>
+					</p>
 				</div>
 			</section>
 			<section>
