add early screens

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,15 +6,15 @@ const currentYear = new Date().getFullYear();
 <footer>
 	<div class="group">
 		<p>
-			Made with <a href="https://astro.build/">Astro</a>
-			<Icon icon="rocket-launch" size="1.2em" />
+			Made with <a href="https://astro.build/">Astro</a> 
+			<!-- <Icon icon="rocket-launch" size="1.2em" /> -->
 		</p>
 		<p>&copy; {currentYear} Cyril Joy Mangalan</p>
 	</div>
 	<p class="socials">
-		<a href="https://twitter.com/da_r3vo"> Twitter</a>
-		<a href="https://linkedin.com/in/cyril-joy-mangalan"> LinkedIn</a>
-		<a href="https://github.com/da-revo"> GitHub</a>
+		<a target="_blank" href="https://twitter.com/da_r3vo"> Twitter</a>
+		<a target="_blank" href="https://linkedin.com/in/cyril-joy-mangalan"> LinkedIn</a>
+		<a target="_blank" href="https://github.com/da-revo"> GitHub</a>
 	</p>
 </footer>
 <style>
