--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-	title = 'Cyril Joy Mangalan: Personal Site',
-	description = 'The personal site of Cyril Joy Mangalan',
+	title = 'Cyril Joy Mangalan: Portfolio',
+	description = 'The portfolio site of Cyril Joy Mangalan',
 } = Astro.props;
 ---
 
