--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,12 +10,12 @@ import Hero from '../components/Hero.astro';
 		<main class="wrapper about">
 			<Hero
 				title="About"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
+				tagline="Thanks for stopping by. Read on to learn more about me."
 			>
 				<img
 					width="1553"
 					height="873"
-					src="/assets/at-work.jpg"
+					src="/assets/cyril-tree.jpeg"
 					alt="Cyril Joy Mangalan at work with a colleague"
 				/>
 			</Hero>
@@ -55,16 +55,26 @@ import Hero from '../components/Hero.astro';
 						<br>
 						<b>Postgraduate Certificate in Entrepreneurship Management</b> <br>
 						<b>Centre for Business, George Brown College</b> <br>
-						<i>Dean&#39;s Honours List for Academic Excellence, GPA: 3.52/4.0</i> <br>
-						Graduating May 2024
+						<i>Dean&#39;s Honours List for Academic Excellence</i> <br>
+						Graduated May 2024
+						<br>
+						<br>
+						<b>Product Management Bootcamp</b> <br>
+						<b>Sauder School of Business, University of British Columbia</b> <br>
+						<i>https://continuingstudies.sauder.ubc.ca/courses/product-management-bootcamp</i> <br>
+						Graduating June 2024
 						<br>
 						<br>
 						<b>Startup School</b> <br>
 						<b>Y Combinator</b> <br>
+						<i>https://www.startupschool.org/companies/getzigg</i> <br>
+						Completed September 2024
 						<br>
 						<br>
 						<b>Backend Development</b> <br>
 						<b>Boot.dev</b> <br>
+						<i>https://www.boot.dev/u/da_revo</i> <br>
+						Ongoing
 					</p>
 				</div>
 			</section>
