--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -15,10 +15,10 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 	{ label: 'LinkedIn', href: 'https://linkedin.com/in/cyril-joy-mangalan', icon: 'linkedin-logo' },
 	{ label: 'GitHub', href: 'https://github.com/da-revo', icon: 'github-logo' },
 	{ label: 'Twitter', href: 'https://twitter.com/da_r3vo', icon: 'twitter-logo' },
+	// { label: 'YouTube', href: 'https://www.youtube.com/@da_revo5747', icon: 'youtube-logo' },
 	// { label: 'Twitch', href: 'https://twitch.tv/da_revo', icon: 'twitch-logo' },
 	// { label: 'CodePen', href: 'https://codepen.io/me', icon: 'codepen-logo' },
 	// { label: 'dribbble', href: 'https://dribbble.com/me', icon: 'dribbble-logo' },
-	{ label: 'YouTube', href: 'https://www.youtube.com/@da_revo5747', icon: 'youtube-logo' },
 ];
 ---
 
