--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const projects = (await getCollection('work'))
 					alt="Cyril Joy Mangalan portrait"
 					width="480"
 					height="620"
-					src="/assets/portrait.png"
+					src="/assets/cyril-cherry.jpeg"
 				/>
 			</header>
 
@@ -82,17 +82,16 @@ const projects = (await getCollection('work'))
 
 			<section class="section with-background bg-variant">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Mentions</h3>
+					<h3>Favourite Technologies</h3>
 					<p>
-						I have been fortunate enough to receive praise for my work in several publications. Take
-						a look below to learn more.
+						I have worked on a huge number of project involving many technologies. Here's a selection of my go-to ones.
 					</p>
 				</header>
 
 				<div class="gallery">
 					<Grid variant="small">
 						{
-							['Medium', 'BuzzFeed', 'The Next Web', 'awwwards.', 'TechCrunch'].map((brand) => (
+							['Go', 'Flutter', 'React',  'Node.js', 'MongoDB', 'Python', 'Google Cloud'].map((brand) => (
 								<li class="mention-card">
 									<p>{brand}</p>
 								</li>
