--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,22 +24,14 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
+						Hey there! I'm Cyril. I'm a Software Engineer with multiple years of experience designing and building innovative and scalable products.
+						I have always been passionate about science and technology and hence been coding, hacking and building things since middle school. Over the years I have worked with and become proficient in a plethora of programming languages and technologies.
+						I bring a combined depth in technical skills with the capability to build out products end-to-end, all the while having empathy for users and a great understanding of business.
 					</p>
+					<br>
 					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
+						I have a proven track record of collaboratively building and shipping these high-quality products.
+						One of my biggest strengths is the ability to use my curiosity and passion for philosophy, history, science and technology to easily understand the bigger picture in everything I do.
 					</p>
 				</div>
 			</section>
@@ -51,6 +43,12 @@ import Hero from '../components/Hero.astro';
 						<b>Manipal Institute of Technology, Manipal University</b> <br>
 						<i>Equivalent to Bachelor of Engineering (BEng) in Canada</i> <br>
 						Graduated June 2021
+						<br>
+						<br>
+						<b>Startup School</b> <br>
+						<b>Y Combinator</b> <br>
+						<i>https://www.startupschool.org/companies/getzigg</i> <br>
+						Completed September 2021
 						<br>
 						<br>
 						<b>Postgraduate Certificate in Entrepreneurship Management</b> <br>
@@ -65,13 +63,7 @@ import Hero from '../components/Hero.astro';
 						Graduating June 2024
 						<br>
 						<br>
-						<b>Startup School</b> <br>
-						<b>Y Combinator</b> <br>
-						<i>https://www.startupschool.org/companies/getzigg</i> <br>
-						Completed September 2024
-						<br>
-						<br>
-						<b>Backend Development</b> <br>
+						<b>Modern Backend Development</b> <br>
 						<b>Boot.dev</b> <br>
 						<i>https://www.boot.dev/u/da_revo</i> <br>
 						Ongoing
