--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -26,7 +26,7 @@ import Hero from '../components/Hero.astro';
 					<p>
 						Hey there! I'm Cyril. I'm a Software Engineer with multiple years of experience designing and building innovative and scalable products.
 						I have always been passionate about science and technology and hence been coding, hacking and building things since middle school. Over the years I have worked with and become proficient in a plethora of programming languages and technologies.
-						I bring a combined depth in technical skills with the capability to build out products end-to-end, all the while having empathy for users and a great understanding of business.
+						I bring a combined depth in technical skills with the capability to build out products end-to-end, all the while, having empathy for users and a great understanding of business.
 					</p>
 					<br>
 					<p>
@@ -59,13 +59,17 @@ import Hero from '../components/Hero.astro';
 						<br>
 						<b>Product Management Bootcamp</b> <br>
 						<b>Sauder School of Business, University of British Columbia</b> <br>
-						<i>https://continuingstudies.sauder.ubc.ca/courses/product-management-bootcamp</i> <br>
+						<i>
+							<a href="https://continuingstudies.sauder.ubc.ca/courses/product-management-bootcamp">Course Information</a>
+						</i> <br>
 						Graduating June 2024
 						<br>
 						<br>
 						<b>Modern Backend Development</b> <br>
 						<b>Boot.dev</b> <br>
-						<i>https://www.boot.dev/u/da_revo</i> <br>
+						<i>
+							<a href="https://www.boot.dev/u/da_revo">User Profile</a>
+						</i> <br>
 						Ongoing
 					</p>
 				</div>
@@ -73,7 +77,37 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<p>
+						Go,
+						JavaScript,
+						TypeScript,
+						HTML,
+						CSS,
+						React,
+						node.js,
+						Flutter,
+						Dart,
+						Python,
+						Flask,
+						PostgreSQL,
+						MongoDB,
+						Redis,
+						Github,
+						Linux,
+						Docker,
+						Agile,
+						TDD,
+						REST,
+						gRPC,
+						C/C++,
+						Java,
+						Android,
+						iOS,
+						Google Cloud,
+						Digital Ocean,
+						Firebase,
+						Vercel
+					</p>
 				</div>
 			</section>
 		</main>
