Add more content

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -26,7 +26,7 @@ import Hero from '../components/Hero.astro';
 					<p>
 						Hey there! I'm Cyril. I'm a Software Engineer with multiple years of experience designing and building innovative and scalable products.
 						I have always been passionate about science and technology and hence been coding, hacking and building things since middle school. Over the years I have worked with and become proficient in a plethora of programming languages and technologies.
-						I bring a combined depth in technical skills with the capability to build out products end-to-end, all the while, having empathy for users and a great understanding of business.
+						I bring a depth in technical skills with the capability to build out products end-to-end, all the while, having empathy for users and a great understanding of business.
 					</p>
 					<br>
 					<p>
