Add all the logos

--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -4,7 +4,7 @@ import Icon from './Icon.astro';
 ---
 
 <aside>
-	<h2>Let's connect!</h2>
+	<h2>Come, say hi!</h2>
 	<CallToAction href="mailto:cyril.da.revo@gmail.com">
 		send me an email
 		<Icon icon="paper-plane-tilt" size="1.2em" />
