--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,9 +11,10 @@ const currentYear = new Date().getFullYear();
 		<p>&copy; {currentYear} Cyril Joy Mangalan</p>
 	</div>
 	<p class="socials">
+		<a target="_blank" href="https://linktr.ee/da_revo"> Linktree</a>
+		<a target="_blank" href="https://github.com/da-revo"> GitHub</a>
 		<a target="_blank" href="https://twitter.com/da_r3vo"> Twitter</a>
 		<a target="_blank" href="https://linkedin.com/in/cyril-joy-mangalan"> LinkedIn</a>
-		<a target="_blank" href="https://github.com/da-revo"> GitHub</a>
 	</p>
 </footer>
 <style>
