--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,7 +84,7 @@ const projects = (await getCollection('work'))
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Favourite Technologies</h3>
 					<p>
-						I have worked on a huge number of project involving many technologies. Here's a selection of my go-to ones.
+						I have worked on a huge number of project involving many technologies. Here's a selection of my favourites.
 					</p>
 				</header>
 
