--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,18 +5,18 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<h2>Full Stack Dev</h2>
+		<p>I have worked across backend, app and web frontend development.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<h2>Previous Founder</h2>
+		<p>I have previously built and launched my own tech startup.</p>
+	</div>
+	<div class="stack gap-2 lg:gap-4">
+		<Icon icon="brain-logo" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Big Picture Thinker</h2>
+		<p>I use my curiosity and passion for learning to quickly understand the bigger picture.</p>
 	</div>
 </section>
 
