Add more content

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,12 +6,12 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack Dev</h2>
-		<p>I have worked across backend, app and web frontend development.</p>
+		<p>I have worked across backend, mobile app and web frontend development.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Previous Founder</h2>
-		<p>I have previously built and launched my own tech startup.</p>
+		<p>I have previously built and launched my own tech startup from zero to one.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="brain-logo" color="var(--accent-regular)" size="2.5rem" gradient />
