Add ZIGG artifacts

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,8 +30,13 @@ import Hero from '../components/Hero.astro';
 					</p>
 					<br>
 					<p>
-						I have a proven track record of collaboratively building and shipping these high-quality products.
+						I have a proven track record of collaboratively building and shipping high-quality products.
 						One of my biggest strengths is the ability to use my curiosity and passion for philosophy, history, science and technology to easily understand the bigger picture in everything I do.
+					</p>
+					<br>
+					<p>
+						Outside of work, I love playing video games, reading philosophy / political theory, raving to Techno/EDM, working out and running.
+						I have successfully run the Manipal half marathon and competed in national-level athletics competitions representing my high school.
 					</p>
 				</div>
 			</section>
