Add marketfeed info

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -57,7 +57,7 @@ import Hero from '../components/Hero.astro';
 						<br>
 						<br>
 						<b>Postgraduate Certificate in Entrepreneurship Management</b> <br>
-						<b>Centre for Business, George Brown College</b> <br>
+						<b>School of Management, George Brown College</b> <br>
 						<i>Dean&#39;s Honours List for Academic Excellence</i> <br>
 						Graduated May 2024
 						<br>
