--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,6 +37,8 @@ import Hero from '../components/Hero.astro';
 					<p>
 						Outside of work, I love playing video games, reading philosophy / political theory, raving to Techno/EDM, working out and running.
 						I have successfully run the Manipal half marathon and competed in national-level athletics competitions representing my high school.
+						<br>
+						I'm also ranked Diamond in Overwatch. 😉
 					</p>
 				</div>
 			</section>
