Add links for Education

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -54,11 +54,20 @@ import Hero from '../components/Hero.astro';
 						<br>
 						<b>Startup School</b> <br>
 						<b>Y Combinator</b> <br>
-						<i>https://www.startupschool.org/companies/getzigg</i> <br>
+						<i>
+							<a href="https://www.startupschool.org/companies/getzigg">
+								Participated in Startup School live online while working on my startup.
+							</a>	
+						</i> <br>
 						Completed September 2021
 						<br>
 						<br>
-						<b>Postgraduate Certificate in Entrepreneurship Management</b> <br>
+						<b>Postgraduate Certificate in 
+							<a href="https://www.georgebrown.ca/programs/entrepreneurship-management-program-postgraduate-b416">
+								Entrepreneurship Management
+							</a>
+						</b> 
+						<br>
 						<b>School of Management, George Brown College</b> <br>
 						<i>Dean&#39;s Honours List for Academic Excellence</i> <br>
 						Graduated May 2024
@@ -67,7 +76,9 @@ import Hero from '../components/Hero.astro';
 						<b>Product Management Bootcamp</b> <br>
 						<b>Sauder School of Business, University of British Columbia</b> <br>
 						<i>
-							<a href="https://continuingstudies.sauder.ubc.ca/courses/product-management-bootcamp">Course Information</a>
+							<a href="https://continuingstudies.sauder.ubc.ca/courses/product-management-bootcamp">
+								Course Information
+							</a>
 						</i> <br>
 						Graduating June 2024
 						<br>
