--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Hi there, I'm Cyril Joy Mangalan"
-					tagline="I am a experienced Software Engineer based in Toronto, Ontario 🇨🇦"
+					tagline="I am an experienced Software Engineer based in Toronto, Ontario 🇨🇦"
 					align="start"
 				>
 					<div class="roles">
