--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -15,7 +15,7 @@ import Icon from './Icon.astro';
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="brain-logo" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Big Picture Thinker</h2>
+		<h2>Strategic Thinker</h2>
 		<p>I use my curiosity and passion for learning to quickly understand the bigger picture.</p>
 	</div>
 </section>
