--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,10 +35,10 @@ const projects = (await getCollection('work'))
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Technology</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Engineering </Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Product </Pill>
 						<Pill><Icon icon="rocket-launch" size="1.33em" /> Startups</Pill>
 						<Pill><Icon icon="pencil-line" size="1.33em" /> Philosophy</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Product</Pill>
 					</div>
 				</Hero>
 
