Revamp with more info and projects

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -70,17 +70,26 @@ import Hero from '../components/Hero.astro';
 						<br>
 						<b>School of Management, George Brown College</b> <br>
 						<i>Dean&#39;s Honours List for Academic Excellence</i> <br>
-						Graduated May 2024
-						<br>
-						<br>
-						<b>Product Management Bootcamp</b> <br>
-						<b>Sauder School of Business, University of British Columbia</b> <br>
 						<i>
-							<a href="https://continuingstudies.sauder.ubc.ca/courses/product-management-bootcamp">
-								Course Information
+							<a href="https://learner.mycreds.ca/r/sharelink/bc7e9c03-fe31-4a3d-8d31-c1565aa06d95/e532cff4-6390-4954-a37a-488090ff76a7">
+								Diploma
 							</a>
 						</i> <br>
-						Graduating June 2024
+						Graduated April 2024
+						<br>
+						<br>
+						<b>
+							<a href="https://continuingstudies.sauder.ubc.ca/courses/product-management-bootcamp">
+								Product Management Bootcamp
+							</a>
+						</b> 
+						<p><b>Sauder School of Business, University of British Columbia</b></p> <br>
+						<i>
+							<a href="https://credentials.continuingstudies.sauder.ubc.ca/12b69023-dc40-4211-943a-1cd7b5ae1a9b">
+								Certificate
+							</a>
+						</i>
+						<p>Graduating June 2024</p>
 						<br>
 						<br>
 						<b>Modern Backend Development</b> <br>
